--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.2",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
     "luxon": "^3.0.3",
     "mongoose": "^6.5.5",
